--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,12 @@
 {
   "env": {
     "es2020": true,
+    "jest/globals": true,
     "node": true
   },
-  "extends": ["eslint:recommended", "prettier"],
+  "extends": ["eslint:recommended", "plugin:jest/recommended", "prettier"],
   "parserOptions": {
     "ecmaVersion": 2019
-  }
+  },
+  "plugins": ["jest"]
 }
