--- a/package.json
+++ b/package.json
@@ -18,14 +18,20 @@
     "lint:check": "eslint --cache",
     "lint:fix": "eslint --cache --fix",
     "pretest": "npm run lint:check",
-    "test": "echo 'Oh, noes!' && exit 1"
+    "test": "jest",
+    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
+    "test:watch": "jest --watchAll"
   },
   "keywords": [],
-  "dependencies": {},
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.3"
+  },
   "devDependencies": {
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-jest": "^23.17.1",
     "husky": "^4.2.5",
+    "jest": "^26.1.0",
     "lint-staged": "^10.2.11",
     "prettier": "^2.0.5"
   },
