--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "node": ">=12"
   },
   "scripts": {
+    "cli": "node src/cli",
+    "cli:debug": "node --inspect-brk src/cli",
     "format:check": "prettier --loglevel warn --check \"**/*.{js,css,md,json}\"",
     "format:fix": "prettier --loglevel warn --write \"**/*.{js,css,md,json}\"",
     "lint:check": "eslint --cache",
@@ -24,6 +26,7 @@
   },
   "keywords": [],
   "dependencies": {
+    "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3"
   },
   "devDependencies": {
